Hotfix failures in constraint solving library
- Allow choco-solver to access `sun.security.action.GetPropertyAction`

- Re-add `absc`, `absc.bat` scripts that were somehow added to `.gitignore`

- Also fix syntax error in example file